# rust-url-shortener

./: Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  init.sql
.github/workflows/: ci.yml  hello.yml
.sqlx/: query-3bb2d775cf089f070312d819983f87a154639cb7ef235ba4d60a8cd4026632a0.json
src/: get_website.rs  main.rs  short_url.rs
