[package]
name = "url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rand = "0.9.2"
serde = {version = "1.0.221",  features = ["derive"] }
tokio = {version = "1.47.1", features = ["full", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid"] }
