[package]
name = "url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["macros"] }
rand = "0.9.2"
serde = {version = "1.0.221",  features = ["derive"] }
tokio = {version = "1.47.1", features = ["full", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid"] }
dotenv = "0.15.0"
serde_json = "1.0.145"
nanoid = "0.4.0"
